# Flask-Prueba

./: .gitignore  README.md  entrypoint.py  pyproject.toml
iacele/: __init__.py
iacele/authentication/: __init__.py  forms.py  login.py  models.py  views.py
iacele/cotizaciones_prueba/: __init__.py  forms.py  models.py  views.py
iacele/dashboard/: __init__.py  views.py
iacele/database/: __init__.py  bulk_insert_db.py  forms.py  views.py
iacele/frontend/: __init__.py  views.py
iacele/static/css/: style_layout.css  style_theme.css
iacele/static/database/: datos.xlsx
iacele/static/js/: index.js
iacele/templates/authentication/: cambiar_contraseña.html  registrar_usuario.html
iacele/templates/base/: base.html  sidenav.html  sidenav_contraida.html
iacele/templates/cotizaciones_prueba/: cotizaciones_expandidas.html  lista_cotizaciones.html  nueva_cotizacion.html  off_canvas_cotizacion.html  prueba.html
iacele/templates/dashboard/: index.html
iacele/templates/database/: insert_bulk_data.html
instance/: devConfig.py  testConfig.py
testing_database/: 01Dev_probar_conexion.py  01Test_probar_conexion.py  05Dev_sesiones_abiertas.py  db_connect.py  sql_ingresar_vistas.py  testSQLite.db
